# greffo

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260423_c080bc1d768e_add_cascade_delete_to_organization_fks.py  20260423_d04bb612eec6_create_organizations_table.py  20260423_fe8d33c28e88_create_users_cases_transcriptions_tables.py  20260426_4d3561b59475_add_transcription_status_check_.py  20260427_752a4e2476c1_add_transcription_segments_table.py  20260429_54ea5955c166_add_auth_verification_tokens_table.py
apps/api/scripts/: demo_e2e.sh  seed_dev.py
apps/api/src/: config.py  main.py  redis.py
apps/api/src/auth/: tenant.py  user.py
apps/api/src/models/: __init__.py  case.py  organization.py  transcription.py  transcription_segment.py  user.py
apps/api/src/routes/: cases.py  organizations.py  stats.py  storage.py  transcriptions.py  users.py
apps/api/src/schemas/: case.py  organization.py  transcription.py
apps/api/src/services/: audit.py  case_service.py  storage_token.py  transcription_service.py
apps/api/src/utils/: audio_format.py  pagination.py
apps/api/tests/: conftest.py  test_cascade_delete.py  test_cases.py  test_organizations.py  test_routes_cases.py  test_routes_organizations.py  test_routes_stats.py  test_routes_transcriptions.py  test_routes_upload.py  test_transcription_provider.py  test_transcriptions.py  test_users.py
(+85 files in other folders)
